--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
       <title>My first website</title>
       <link href="https://fonts.googleapis.com/css2?family=The+Nautigal:wght@700&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
-      <link rel="stylesheet" href="Desktop/kodilla/taskrunner2/vendor/bootstrap-grid.css">
+      <link rel="stylesheet" href="./vendor/bootstrap-grid.css">
       <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <nav class="navbar fixed-top">
-        <div class="container-fluid">
-            <h4>Golden</h4>
-            <ul class="justify-content-md-end">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">SERVICES</a></li>
-                <li><a href="#">PORTFOLIO</a></li>
-                <li><a href="#">CONTACT</a></li>
-            </ul>
-        </div>
-    </nav>
     <header class="splash">
+        <nav class="navbar navbar-expand-md fixed-top">
+            <div class="container-fluid justify-content space-between">
+                <a class="navbar-brand text-warning" href="#">Golden</a>
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">SERVICES</a></li>
+                    <li><a href="#">PORTFOLIO</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="splash-inner">
-            <img src="https://images.pexels.com/photos/322207/pexels-photo-322207.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
             <h1 class="page-title">Welcome to our studio</h1>
             <h2 class="page-subtitle">IT'S NICE TO MEET YOU</h2>
             <a href="#" class="btn btn-warning">TELL ME MORE</a>
@@ -32,9 +31,9 @@
     <section class="services">
         <div class="container">
             <h2 class="title">SERVICES</h2>
-            <h5>Proin iaculis purus consequat sem cure.</h3>
+            <h5>Proin iaculis purus consequat sem cure.</h5>
 			<div class="wrapper">
-			    <div class="box col-4">
+			    <div class="box col-12 col-md-4">
 			        <i class="fas fa-shopping-basket"></i>
 			        <h3 class="box-title">E-commerce</h3>
 				    <p>
@@ -57,10 +56,10 @@
                     Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. <br>
                     Praesent commodo massa malesuada <br>libero luctus tincidunt. <br>
                     </p>
-				</div>						
+				</div>
 			</div>
 		</div>
-	</section>		
+	</section>
     <section class="our-portfolio">
         <div class="container">
             <h2 class="title">OUR PORTFOLIO</h2>
@@ -68,85 +67,64 @@
             <div class="row">
                 <div class="wrapper col-sm-6 col-lg-4">
                   <div class="card d-flex justify-content-center align-items-center">
-                    <div class="card-image"><img src="https://i.postimg.cc/wjmzXK88/4.jpg">                       </div>
+                    <div class="card-image"><img alt="test" src="https://i.postimg.cc/wjmzXK88/4.jpg"></div>
                     <div class="card-body">
                     <h5>Phasellus rhoncus</h5>
-                    <a class="btn btn-light">Add to cart</a> 
-                    </div>               
+                    </div>
                   </div>
                 </div>
                 <div class="wrapper col-sm-6 col-lg-4">
                   <div class="card d-flex justify-content-center align-items-center">
-                    <div class="card-image"><img src="https://i.postimg.cc/gkrm0Xg0/6.jpg">                       </div>
+                    <div class="card-image"><img alt="test" src="https://i.postimg.cc/gkrm0Xg0/6.jpg"></div>
                     <div class="card-body">
                       <h5>Sed tincidunt</h5>
-                      <a class="btn btn-light">Add to cart</a> 
                       </div>
                   </div>
                 </div>
                 <div class="wrapper col-sm-6 col-lg-4">
                   <div class="card d-flex justify-content-center align-items-center">
-                    <div class="card-image"><img src="https://i.postimg.cc/mZmTRNNq/7.jpg">                       </div>
+                    <div class="card-image"><img alt="test" src="https://i.postimg.cc/mZmTRNNq/7.jpg"></div>
                     <div class="card-body">
                       <h5>Suspendisse</h5>
-                      <a class="btn btn-light">Add to cart</a> 
                       </div>
                   </div>
                 </div>
-                <div class="wrapper col-sm-6 d-lg-none">
-                <div class="card d-flex justify-content-center align-items-center">
-                    <div class="card-image"><img src="https://i.postimg.cc/3kGv9F9Y/7.jpg">                       </div>
-                       <div class="card-body">
-                          <h5>Suspendisse</h5>
-                          <a class="btn btn-light">Add to cart</a> 
-                      </div>
-                    </div>
-                  </div>
               </div>
-        </div>
-    </section>
-    <section class="contact">
-        <div class="container">
-            <div class="wrapper">
-                <form class="form">
-                    <h2 class="contact-title">contact us</h2>
-                    <div class="form-input-container">
-                        <input type="text" id="fname" placeholder="Your name" minlength="3" required />
-                    </div>    
-                    <div class="form-input-container">
-                        <input type="email" id="email" placeholder="Your e-mail" required />
+              <div class="row">
+                <div class="wrapper col-sm-6 col-lg-4">
+                  <div class="card d-flex justify-content-center align-items-center">
+                    <div class="card-image"><img alt="test" src="https://images.pexels.com/photos/6858599/pexels-photo-6858599.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"></div>
+                    <div class="card-body">
+                    <h5>Phasellus rhoncus</h5>
                     </div>
-                    <div class="form-input-container">
-                        <input type="text" id="subject" placeholder="Subject" minlength="2" required />
-                    </div>
-                    <div class="form-input-container">
-                        <input type="message" id="message" placeholder="Type your message here" required />                 
-                        <a href="#" class="submit">Submit</a>
-                    </div>
-                </form>
-                <div class="form-text">
-                    <span>
-                        <h3><b>web developer</b></h3><br>
-                        <p>Małgorzata Kowalska</p><br><br>
-                    </span><br>
-                    <span>
-                        <h3><b>address</b></h3><br>
-                        <p>ul.Świętojańska 110<br>81-388 Gdynia</p><br>
-                    </span>
-                    <span>
-                        <h3><b>phone number</b></h3><br>
-                        <p>777-672-358</p>
-                    </span>
+                  </div>
                 </div>
+                <div class="wrapper col-sm-6 col-lg-4">
+                  <div class="card d-flex justify-content-center align-items-center">
+                    <div class="card-image"><img alt="test" src="https://images.pexels.com/photos/1164975/pexels-photo-1164975.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"></div>
+                    <div class="card-body">
+                      <h5>Sed tincidunt</h5>
+                      </div>
+                  </div>
+                </div>
+                <div class="wrapper col-sm-6 col-lg-4">
+                  <div class="card d-flex justify-content-center align-items-center">
+                    <div class="card-image"><img alt="test" src="https://images.pexels.com/photos/2444403/pexels-photo-2444403.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"></div>
+                    <div class="card-body">
+                      <h5>Suspendisse</h5>
+                      </div>
+                  </div>
+                </div>
+              </div>
             </div>
-        </div>
-    </section>
-     <footer class="media">
-            <ul class="media_icons">
-                <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i>Instagram</a></li>
-                <li><a href="#"><i class="fab fa-behance"></i>Behance</a></li>
-            </ul>
+     </section>
+     <footer class="media justify-content space-between">
+         <div class="copyright">© Copyright 2014 FreebiesXpress.com</div>
+         <ul class="media_icons">
+            <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i>Instagram</a></li>
+            <li><a href="#"><i class="fab fa-behance"></i>Behance</a></li>
+         </ul>
      </footer>
   </body>
 </html>
