--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link href="https://fonts.googleapis.com/css2?family=The+Nautigal:wght@700&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
       <link rel="stylesheet" href="./vendor/bootstrap-grid.css">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="splash">
