--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="splash">
     <nav class="navbar navbar-expand-md">
       <a class="navbar-brand text-warning" href="#">Golden</a>
-      <div class="collapse navbar-collapse justify-content-end col-12">
+      <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
           <li>
             <a class="nav-link col-md-4" href="#">HOME</a>
@@ -35,7 +35,7 @@
     <div class="splash-inner">
       <h1 class="page-title d-flex">Welcome to our studio</h1>
       <h2 class="page-subtitle d-flex">IT'S NICE TO MEET YOU</h2>
-      <a href="#" class="btn btn-warning row d-flex col-md-2 btn-center justify-content-center align-content-center">TELL ME MORE</a>
+      <a href="#" class="btn btn-warning row d-flex col-6 col-md-2 btn-center justify-content-center align-content-center">TELL ME MORE</a>
     </div>
   </header>
   <section class="services">
@@ -44,27 +44,27 @@
       <h5 class="font-italic justify-content-center d-flex">Proin iaculis purus consequat sem cure.</h5>
       <div class="wrapper d-flex">
         <div class="box col-12 col-md-4">
-          <i class="fas fa-shopping-basket col-12 col-md-4 justify-content-center"></i>
+          <i class="fas fa-shopping-basket"></i>
           <h3 class="box-title">E-commerce</h3>
           <p class="text-justify">
-            Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. <br>
-            Praesent commodo massa malesuada <br>libero luctus tincidunt. <br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Praesent commodo massa malesuada libero luctus tincidunt.
           </p>
         </div>
         <div class="box col-12 col-md-4">
           <i class="fas fa-laptop-code"></i>
           <h3 class="box-title">Responsive Web</h3>
           <p class="text-justify">
-            Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. <br>
-            Praesent commodo massa malesuada <br>libero luctus tincidunt. <br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Praesent commodo massa malesuada libero luctus tincidunt.
           </p>
         </div>
         <div class="box col-12 col-md-4">
           <i class="fas fa-lock"></i>
           <h3 class="box-title">Web security</h3>
           <p class="text-justify">
-            Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. <br>
-            Praesent commodo massa malesuada <br>libero luctus tincidunt. <br>
+            Lorem ipsum dolor sit amet,consectetur adipiscing elit. 
+            Praesent commodo massa malesuada libero luctus tincidunt.
           </p>
         </div>
       </div>
@@ -76,24 +76,24 @@
       <h5 class="font-italic justify-content-center d-flex">Proin iaculis purus consequat sem cure.</h5>
       <div class="row">
         <div class="wrapper col-sm-6 col-lg-4">
-          <div class="card d-flex justify-content-center align-items-center">
-            <div class="card-image"><img alt="test" src="https://i.postimg.cc/mtXhnVMF/pexels-artur-roman-534362.jpg"></div>
+          <div class="card align-items-center">
+            <div class="card-image" style="width: 100%"><img alt="test" src="https://i.postimg.cc/mtXhnVMF/pexels-artur-roman-534362.jpg" style="width: 100%"></div>
             <div class="card-body">
               <h5>Phasellus rhoncus</h5>
             </div>
           </div>
         </div>
         <div class="wrapper col-sm-6 col-lg-4">
-          <div class="card d-flex justify-content-center align-items-center">
-            <div class="card-image"><img alt="test" src="https://i.postimg.cc/ct1498Lm/pexels-daria-shevtsova-1070981.jpg"></div>
+          <div class="card align-items-center">
+            <div class="card-image" style="width: 100%"><img alt="test" src="https://i.postimg.cc/ct1498Lm/pexels-daria-shevtsova-1070981.jpg" style="width: 100%"></div>
             <div class="card-body">
               <h5>Sed tincidunt</h5>
             </div>
           </div>
         </div>
         <div class="wrapper col-sm-6 col-lg-4">
-          <div class="card d-flex justify-content-center align-items-center">
-            <div class="card-image"><img alt="test" src="https://i.postimg.cc/R6B0tYr2/pexels-elviss-railijs-bita-ns-1389429.jpg"></div>
+          <div class="card align-items-center">
+            <div class="card-image" style="width: 100%"><img alt="test" src="https://i.postimg.cc/R6B0tYr2/pexels-elviss-railijs-bita-ns-1389429.jpg" style="width: 100%"></div>
             <div class="card-body">
               <h5>Suspendisse</h5>
             </div>
@@ -102,24 +102,24 @@
       </div>
       <div class="row">
         <div class="wrapper col-sm-6 col-lg-4">
-          <div class="card d-flex justify-content-center align-items-center">
-            <div class="card-image"><img alt="test" src="https://i.postimg.cc/LqfXnpWz/pexels-moose-photos-1037993.jpg"></div>
+          <div class="card align-items-center">
+            <div class="card-image" style="width: 100%"><img alt="test" src="https://i.postimg.cc/LqfXnpWz/pexels-moose-photos-1037993.jpg" style="width: 100%"></div>
             <div class="card-body">
               <h5>Phasellus rhoncus</h5>
             </div>
           </div>
         </div>
         <div class="wrapper col-sm-6 col-lg-4">
-          <div class="card d-flex justify-content-center align-items-center">
-            <div class="card-image"><img alt="test" src="https://i.postimg.cc/XGkYkg4q/pexels-pixabay-260024.jpg"></div>
+          <div class="card align-items-center">
+            <div class="card-image" style="width: 100%"><img alt="test" src="https://i.postimg.cc/XGkYkg4q/pexels-pixabay-260024.jpg" style="width: 100%"></div>
             <div class="card-body">
               <h5>Sed tincidunt</h5>
             </div>
           </div>
         </div>
         <div class="wrapper col-sm-6 col-lg-4">
-          <div class="card d-flex justify-content-center align-items-center">
-            <div class="card-image"><img alt="test" src="https://i.postimg.cc/23C68g7Z/pexels-skitterphoto-594388.jpg"></div>
+          <div class="card align-items-center">
+            <div class="card-image" style="width: 100%"><img alt="test" src="https://i.postimg.cc/23C68g7Z/pexels-skitterphoto-594388.jpg" style="width: 100%"></div>
             <div class="card-body">
               <h5>Suspendisse</h5>
             </div>
@@ -128,13 +128,17 @@
       </div>
     </div>
   </section>
-  <footer class="media justify-content space-between">
+  <footer class="media align-items-center justify-content-center d-flex">
     <div class="copyright">© Copyright 2014 FreebiesXpress.com</div>
-    <ul class="media_icons d-flex">
-      <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
-      <li><a href="#"><i class="fab fa-instagram"></i>Instagram</a></li>
-      <li><a href="#"><i class="fab fa-behance"></i>Behance</a></li>
+    <div class="box for media">
+    <ul class="media_icons d-flex justify-content-center ">
+      <li><a href="#"><i class="fab fa-facebook"></i>Facebook</a></li>
+      <li><a href="#"><i class="fab fa-google-plus"></i>Instagram</a></li>
+      <li><a href="#"><i class="fab fa-pinterest"></i>Behance</a></li>
+      <li><a href="#"><i class="fab fa-twitter"></i>Behance</a></li>
     </ul>
+  </div>
+    <div class="empty"></div>
   </footer>
 </body>
 </html>
